feat: cart & user order

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.hibernate.ddl-auto = update
 #Disable the default loggers
 logging.level.org = WARN
 logging.level.blog = WARN
+
+#Redis Properties
+#redis.host=localhost
+#redis.port=6379
