feat: connect elastic & create docker-compose.yaml file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ logging.level.blog = WARN
 redis.host=localhost
 redis.port=6379
 logging.level.org.springframework.cache=DEBUG
+
+#Log Properties
+logging.file.path=C:\\Users\\Aser\\Desktop\\University\\3_kurs\\5_sem\\WEB\\Kurs\\logs\\
+logging.level.root=warn
+logging.level.org.springframework=INFO
+
+
